# UERANSIM-Handover

./: .gitignore  CLI_Commands.md  CMakeLists.txt  CondHandover_Process.md  Conditional_Handover_Diagram.txt  GNBCallFlow_README.md  GNB_Operations_README.MD  Handover_Diagram.txt  Identifiers.md  MeasurementReport_r15.txt  NAS_state_discussion.md  NTS.md  README.md  RRC_Reconfiguration_R17_ASN1.txt  RRC_Reconfiguration_R17_ASN1_ref.txt  SIB19_ASN.txt  Satellite_Module.md  UECallFlow.md  UECallFlow_README.md  UE_Operations_README.MD  XNAP_R18.tst  makefile  prompt.txt  requirements.txt  run_handover_tests.sh  run_pcap_analysis.sh  starlink_planes.csv  syth_three_plane.txt
.claude/: settings.json
.github/: copilot-instructions.md
cmake/: ExternalSgp4.cmake
config/: custom-gnb.yaml  custom-ue.yaml  free5gc-gnb.yaml  free5gc-ue.yaml  open5gs-gnb.yaml  open5gs-ue.yaml  satsim-gnb.yaml  satsim-ue.yaml
src/: cli.cpp  gnb.cpp  ue.cpp
src/gnb/: CMakeLists.txt  gnb.cpp  gnb.hpp  neighbors.cpp  neighbors.hpp  nts.hpp  sat_time.cpp  sat_time.hpp  sat_tle_store.cpp  sat_tle_store.hpp  types.cpp  types.hpp
src/gnb/app/: cmd_handler.cpp  cmd_handler.hpp  task.cpp  task.hpp
src/gnb/gtp/: task.cpp  task.hpp  utils.cpp  utils.hpp
src/gnb/ngap/: context.cpp  handover.cpp  interface.cpp  management.cpp  nas.cpp  nnsf.cpp  radio.cpp  session.cpp  task.cpp  task.hpp  transport.cpp
src/gnb/rls/: ctl_task.cpp  ctl_task.hpp  pos_sim.cpp  pos_sim.hpp  sat_pos_sim.cpp  sat_pos_sim.hpp  sat_position_task.cpp  sat_position_task.hpp  satellite_state.cpp  satellite_state.hpp  task.cpp  task.hpp  udp_task.cpp  udp_task.hpp
src/gnb/rrc/: broadcast.cpp  channel.cpp  connection.cpp  handler.cpp  handover.cpp  management.cpp  sap.cpp  sat_calcs.cpp  task.cpp  task.hpp  ues.cpp
src/gnb/xn/: protocol.cpp  protocol.hpp  task.cpp  task.hpp  udp_task.cpp  udp_task.hpp
src/lib/: CMakeLists.txt
src/ue/: nts.hpp  types.cpp  types.hpp  ue.cpp  ue.hpp
src/utils/: common.cpp  common.hpp  common_types.cpp  common_types.hpp  constants.hpp  logger.cpp  logger.hpp  network.cpp  network.hpp  nts.hpp  options.cpp  position_calcs.cpp  position_calcs.hpp  sat_time.cpp  sat_time.hpp  yaml_utils.cpp  yaml_utils.hpp
tests/: README.md  conftest.py  manual_handover.py  open5gs-dbctl.py  open5gs-dbctl.sh  position_calcs_tests.cpp  requirements.txt  rrc_reference_location_tests.cpp  sat_lib_tests.cpp  sat_time_tests.cpp  test_cho.py  test_handover.py  test_measurement.py  test_oob_handover.py  test_signaling.py  test_ue_nas_states.py  test_ue_rrc_states.py
tests-new/: README.md
tests-new/gnb/: conftest.py  test_gnb_handover.py  test_gnb_health.py  test_gnb_ngap.py  test_gnb_registration.py  test_gnb_rrc.py
tests-new/ue/: manual_handover.py  test_ue_handover.py  test_ue_nas_states.py  test_ue_rls.py  test_ue_rrc_states.py
tests/configs/: test-ue.yaml  test_gnb1.yaml  test_gnb2.yaml  test_ue1.yaml
tests/gnb/: __init__.py  conftest.py  test_gnb_handover.py  test_gnb_health.py  test_gnb_neighbors_cli.py  test_gnb_ngap.py  test_gnb_registration.py  test_gnb_rrc.py  test_gnb_rsrp_models.py  test_gnb_sib19.py  test_sat_time_runtime.py
tests/gnb_harness/: __init__.py  fake_amf.py  fake_ue.py  gnb_process.py  marks.py  ngap_codec.py
tests/harness/: __init__.py  fake_gnb.py  milenage.py  nas_builder.py  rls_protocol.py  rrc_builder.py  ue_process.py
tests/ue/: conftest.py  demo_handover_a3.py  manual_handover.py  test_ue_cho.py  (+4 more)
tle_data/: starlink_tles_2026_04_27_set1.txt  synth_three_plane.txt  synthetic_plane.txt
tools/: gen_sib1_hex.cpp  open5gs-dbctl.py  reset_core.sh  rls-wireshark-dissector.lua  rrc-15.6.0-expanded.asn1  rrc-15.6.0.asn1  rrc_d1_probe.cpp  verify_milenage  verify_milenage.cpp
(+351 files in other folders)
